--- a/views/candidateCultureSort.ejs
+++ b/views/candidateCultureSort.ejs
@@ -9,7 +9,7 @@
     <!-- SORT LIST CSS -->
     <link href="http://rubaxa.github.io/Ply/ply.css" rel="stylesheet" type="text/css"/>
     <link href="http://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet" type="text/css"/>
-    <link href="/views/css/sortable-master/st/app.css" rel="stylesheet" type="text/css"/>
+    <link href="../views/css/sortable-master/st/app.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 
@@ -44,12 +44,34 @@
             <li data-id="21">Teacher/Mentor</li>
         </ul>
     </div>
-
-
-
-
 </div>
 
+<div class="container" style="height: 1000px;">
+    <div data-force="100" class="layer block" style="top: 0; width: 37%; border-style:solid;">
+        <div class="layer title">Rank Your Skills</div>
+        <ul id="skill_sort" class="block__list block__list_words">
+            <li data-id="1">Project Management</li>
+            <li data-id="2">Tech Writing</li>
+            <li data-id="3">Programming Scripts</li>
+            <li data-id="4">Programming Java</li>
+            <li data-id="5">Programming C/C++/C# etc</li>
+            <li data-id="6">Programming Python, Ruby, Web2Py</li>
+            <li data-id="7">Database</li>
+            <li data-id="8">UI/UX</li>
+            <li data-id="9">Algorithms</li>
+            <li data-id="10">Debugging</li>
+            <li data-id="11">System Design</li>
+            <li data-id="12">Business Analysis</li>
+            <li data-id="13">Web Development</li>
+            <li data-id="14">Mobile Development</li>
+            <li data-id="15">OS</li>
+            <li data-id="16">System Architecture</li>
+            <li data-id="17">System Integration</li>
+            <li data-id="18">AI</li>
+            <li data-id="19">Game Programming</li>
+        </ul>
+    </div>
+</div>
 <!----- SORTS JS ------>
 <script src="/views/css/sortable-master/Sortable.js"></script>
 <script src="http://rubaxa.github.io/Ply/Ply.min.js"></script>
